add icon for file

--- a/app/src/main/res/layout/current_item_file.xml
+++ b/app/src/main/res/layout/current_item_file.xml
@@ -17,31 +17,49 @@
         android:layout_marginTop="8dp"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/bottom_view"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical|center"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="306dp"
-            tools:layout_editor_absoluteY="33dp" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/file_name_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:singleLine="true"
-            android:text="ddd"
-            android:textSize="18sp" />
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/item_height"
+                android:layout_gravity="left"
+                android:layout_weight="1"
+                app:srcCompat="@android:color/background_light" />
 
-        <TextView
-            android:id="@+id/date_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:text="TextView"
-            android:textSize="14sp" />
+            <TextView
+                android:id="@+id/file_name_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:singleLine="true"
+                android:text="ddd"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/bottom_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_vertical|center"
+                android:text="TextView"
+                tools:layout_editor_absoluteX="306dp"
+                tools:layout_editor_absoluteY="33dp" />
+
+            <TextView
+                android:id="@+id/date_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:singleLine="true"
+                android:text="TextView"
+                android:textSize="14sp" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
