--- a/app/src/main/res/layout/current_item_file.xml
+++ b/app/src/main/res/layout/current_item_file.xml
@@ -23,7 +23,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/icon_file"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/item_height"
                 android:layout_gravity="left"
