--- a/app/src/main/res/layout/current_item_file.xml
+++ b/app/src/main/res/layout/current_item_file.xml
@@ -15,11 +15,13 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:gravity="top|left"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="top"
             android:orientation="horizontal">
 
             <ImageView
@@ -52,7 +54,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="center_vertical|center"
+                    android:gravity="center_vertical"
                     android:text="TextView"
                     tools:layout_editor_absoluteX="306dp"
                     tools:layout_editor_absoluteY="33dp" />
@@ -64,6 +66,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:gravity="top|left"
                 android:singleLine="true"
                 android:text="TextView"
                 android:textSize="14sp" />
