--- a/app/src/main/res/layout/current_item_file.xml
+++ b/app/src/main/res/layout/current_item_file.xml
@@ -44,18 +44,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="center_vertical"
+                    android:gravity="top|center_vertical"
                     android:singleLine="true"
                     android:text="ddd"
-                    android:textSize="18sp" />
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/bottom_view"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="center_vertical"
+                    android:gravity="right|center_vertical"
+                    android:maxLines="3"
                     android:text="TextView"
+                    android:textSize="12sp"
                     tools:layout_editor_absoluteX="306dp"
                     tools:layout_editor_absoluteY="33dp" />
 
@@ -66,10 +68,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="top|left"
                 android:singleLine="true"
                 android:text="TextView"
-                android:textSize="14sp" />
+                android:textSize="12sp" />
 
         </LinearLayout>
 
