--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,13 @@
     tools:context=".MainActivity">
 
     <FrameLayout
+        android:id="@+id/directory_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/directory_navigation_height">
+
+    </FrameLayout>
+
+    <FrameLayout
         android:id="@+id/fileviewonactivity"
         android:layout_width="0dp"
         android:layout_height="0dp"
