--- a/app/src/main/res/layout/fragment_directory_navigation.xml
+++ b/app/src/main/res/layout/fragment_directory_navigation.xml
@@ -8,4 +8,11 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/navigation_recycler_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scrollbars="horizontal" >
+
+    </android.support.v7.widget.RecyclerView>
 </HorizontalScrollView>
