--- a/app/src/main/res/layout/directory_navigation.xml
+++ b/app/src/main/res/layout/directory_navigation.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/item_height">
+    android:layout_width="wrap_content"
+    android:layout_height="@dimen/directory_navigation_height">
 
     <TextView
         android:id="@+id/path_navigation"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/directory_navigation_height"
+        android:gravity="center_vertical"
+        android:maxLines="1"
         android:textSize="16sp" />
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
