--- a/app/src/main/res/layout/fragment_directory_navigation.xml
+++ b/app/src/main/res/layout/fragment_directory_navigation.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_directory_navigation"
     android:layout_width="match_parent"
     android:layout_height="@dimen/directory_navigation_height"
+    android:orientation="horizontal"
     tools:context=".api.fragment.DirectoryNavigationFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/navigation_recycler_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scrollbars="horizontal" >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:orientation="horizontal"
+        android:scrollbars="horizontal">
 
     </android.support.v7.widget.RecyclerView>
-</HorizontalScrollView>
+</LinearLayout>
