--- a/app/src/main/res/layout/fragment_file_view.xml
+++ b/app/src/main/res/layout/fragment_file_view.xml
@@ -18,17 +18,10 @@
 
     </android.support.v7.widget.RecyclerView>
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/fileList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="top"
-        android:layout_weight="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </ListView>
+        android:layout_weight="1" />
 
 </LinearLayout>
