--- a/app/src/main/res/layout/current_item_file.xml
+++ b/app/src/main/res/layout/current_item_file.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/item_height"
-    android:orientation="vertical">
+    android:layout_height="@dimen/item_height">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,7 +17,6 @@
             android:layout_height="@dimen/item_height"
             android:layout_gravity="left"
             android:layout_weight="1"
-            android:contentDescription="Icon Files"
             app:srcCompat="@android:color/background_light" />
 
         <LinearLayout
@@ -34,7 +32,6 @@
                 android:layout_weight="1"
                 android:gravity="top|center_vertical"
                 android:singleLine="true"
-                android:text="ddd"
                 android:textSize="14sp" />
 
             <TextView
@@ -61,4 +58,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
