--- a/app/src/main/res/layout/current_item_file.xml
+++ b/app/src/main/res/layout/current_item_file.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/CardView"
     android:layout_width="match_parent"
     android:layout_height="@dimen/item_height">
 
@@ -15,8 +16,8 @@
             android:id="@+id/icon_file"
             android:layout_width="match_parent"
             android:layout_height="@dimen/item_height"
-            android:layout_gravity="left"
             android:layout_weight="1"
+            android:contentDescription="@string/iconfile"
             app:srcCompat="@android:color/background_light" />
 
         <LinearLayout
@@ -28,18 +29,17 @@
             <TextView
                 android:id="@+id/file_name_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:gravity="top|center_vertical"
                 android:singleLine="true"
+                android:text="@string/namefile"
                 android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/size_item"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:gravity="right|center_vertical"
                 android:maxLines="3"
                 android:textSize="12sp"
                 tools:layout_editor_absoluteX="306dp"
@@ -53,9 +53,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:singleLine="true"
-            android:text="TextView"
+            android:text="@string/datefile"
             android:textSize="12sp" />
 
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
