--- a/app/src/main/res/layout/current_item_file.xml
+++ b/app/src/main/res/layout/current_item_file.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/CardView"
     android:layout_width="match_parent"
     android:layout_height="@dimen/item_height">
 
@@ -10,7 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="top"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        tools:layout_editor_absoluteY="4dp"
+        tools:ignore="MissingConstraints">
 
         <ImageView
             android:id="@+id/icon_file"
@@ -29,16 +30,16 @@
             <TextView
                 android:id="@+id/file_name_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:gravity="top|center_vertical"
                 android:singleLine="true"
                 android:text="@string/namefile"
                 android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/size_item"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
                 android:layout_weight="1"
                 android:maxLines="3"
                 android:textSize="12sp"
@@ -58,4 +59,4 @@
 
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+</android.support.constraint.ConstraintLayout>
