--- a/app/src/main/res/layout/fragment_file_view.xml
+++ b/app/src/main/res/layout/fragment_file_view.xml
@@ -24,8 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:fillViewport="true"
-        android:focusableInTouchMode="true">
+        android:fillViewport="true">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/fileList"
