--- a/app/src/main/res/layout/current_item_file.xml
+++ b/app/src/main/res/layout/current_item_file.xml
@@ -1,62 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/item_height">
 
+    <ImageView
+        android:id="@+id/icon_file"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/item_height"
+        android:layout_weight="1"
+        android:contentDescription="@string/iconfile"
+        app:srcCompat="@android:color/background_light" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="top"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteY="4dp"
-        tools:ignore="MissingConstraints">
-
-        <ImageView
-            android:id="@+id/icon_file"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/item_height"
-            android:layout_weight="1"
-            android:contentDescription="@string/iconfile"
-            app:srcCompat="@android:color/background_light" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/file_name_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="top|center_vertical"
-                android:singleLine="true"
-                android:text="@string/namefile"
-                android:textSize="14sp" />
-
-            <TextView
-                android:id="@+id/size_item"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:maxLines="3"
-                android:textSize="12sp"
-                tools:layout_editor_absoluteX="306dp"
-                tools:layout_editor_absoluteY="33dp" />
-
-        </LinearLayout>
+        android:layout_weight="1"
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/date_view"
+            android:id="@+id/file_name_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:gravity="top|center_vertical"
             android:singleLine="true"
-            android:text="@string/datefile"
-            android:textSize="12sp" />
+            android:text="@string/namefile"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/size_item"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:maxLines="3"
+            android:textSize="12sp"
+            tools:layout_editor_absoluteX="306dp"
+            tools:layout_editor_absoluteY="33dp" />
 
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/date_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:singleLine="true"
+        android:text="@string/datefile"
+        android:textSize="12sp" />
+
+</LinearLayout>
